--- a/templates/portfolio/project_list.html
+++ b/templates/portfolio/project_list.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 <!-- Page Header & Filters -->
-<section class="pt-32 pb-12 bg-white">
+<section class="pt-32 pb-12">
     <div class="container mx-auto px-4 md:px-8">
         <div class="flex flex-col md:flex-row justify-between items-end gap-8">
             <!-- Left: Title & Subtitle -->
@@ -35,7 +35,7 @@
 </section>
 
 <!-- Projects Grid -->
-<section class="pb-32 bg-white min-h-[50vh]">
+<section class="pb-32 min-h-[50vh]">
     <div class="container mx-auto px-4 md:px-8">
         {% if projects %}
         <div class="grid grid-cols-1 md:grid-cols-2 gap-8 md:gap-12">
