--- a/templates/portfolio/project_detail.html
+++ b/templates/portfolio/project_detail.html
@@ -7,7 +7,7 @@
 <!-- Swiper CSS -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 
-<div class="bg-white min-h-screen pt-24 pb-12">
+<div class="min-h-screen pt-24 pb-12">
     <div class="container mx-auto px-4 md:px-8 h-full">
         <div class="flex flex-col lg:flex-row gap-12 lg:gap-20 h-full">
 
