--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Nataliya Kulchinskaya | Interior Designer{% endblock %}</title>
+    <meta name="description"
+        content="{% block meta_description %}{{ meta_description|default:'Дизайн интерьера от Наталии Кульчинской' }}{% endblock %}">
+    <meta name="keywords"
+        content="{% block meta_keywords %}{{ meta_keywords|default:'дизайн интерьера, дизайн-проект, интерьер' }}{% endblock %}">
+    <link rel="canonical" href="{% block canonical_url %}{{ request.build_absolute_uri }}{% endblock %}">
 
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -70,7 +75,8 @@
             <!-- Desktop Nav -->
             <nav
                 class="hidden md:flex items-center gap-8 text-[11px] uppercase tracking-[0.15em] font-medium {% block header_nav_class %}text-[#1a1a1a]/80{% endblock %}">
-                <a href="{% url 'pages:samples' %}" class="hover:text-black transition-colors">Образцы проектов</a>
+                <a href="{% url 'samples:sample_list' %}" class="hover:text-black transition-colors">Образцы
+                    проектов</a>
                 <a href="{% url 'pages:pricing' %}" class="hover:text-black transition-colors">Стоимость</a>
                 <a href="{% url 'portfolio:project_list' %}" class="hover:text-black transition-colors">Портфолио</a>
                 <a href="{% url 'pages:about' %}" class="hover:text-black transition-colors">Обо мне</a>
@@ -91,7 +97,7 @@
                 <div x-show="open" x-transition.opacity
                     class="fixed inset-0  z-40 flex flex-col items-center justify-center space-y-8 text-sm uppercase tracking-widest text-[#1a1a1a]"
                     @click.outside="open = false" style="display: none;">
-                    <a href="{% url 'pages:samples' %}" class="hover:text-gray-500">Образцы проектов</a>
+                    <a href="{% url 'samples:sample_list' %}" class="hover:text-gray-500">Образцы проектов</a>
                     <a href="{% url 'pages:pricing' %}" class="hover:text-gray-500">Стоимость</a>
                     <a href="{% url 'portfolio:project_list' %}" class="hover:text-gray-500">Портфолио</a>
                     <a href="{% url 'pages:about' %}" class="hover:text-gray-500">Обо мне</a>
