--- a/templates/portfolio/project_list.html
+++ b/templates/portfolio/project_list.html
@@ -18,10 +18,10 @@
 
             <!-- Right: Tabs/Filters -->
             <div class="flex flex-wrap gap-2">
-                <a href="{% url 'portfolio:project_list' %}"
+                <!--<a href="{% url 'portfolio:project_list' %}"
                     class="{% if not current_category %}bg-black text-white border-black{% else %}bg-transparent text-gray-400 border-gray-100 hover:border-gray-300 hover:text-gray-600{% endif %} border px-6 py-2 text-[10px] uppercase tracking-widest transition-all duration-300">
                     Все
-                </a>
+                </a>-->
 
                 {% for category in categories %}
                 <a href="{% url 'portfolio:project_list_by_category' category.slug %}"
